# serilux

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/source/: changelog.rst  introduction.rst
docs/source/user_guide/: advanced_usage.rst  basic_usage.rst  object_registry.rst
examples/: callable_serialization.py
scripts/: README.md  test_release_notes.sh
serilux/: __init__.py  __init__.pyi  exceptions.py  serializable.py
tests/: test_auto_registration_fix.py  test_deeply_nested_containers.py  test_edge_cases.py  test_modern_features.py  test_object_registry_nested.py  test_registry.py  test_registry_conflict.py  test_serializable.py  test_serialization_utils.py  test_validation.py
